fix(PanelHeader): add gap && center in after (#5272)
* fix(PanelHeader): add gap && center in after

Добавляем в after расстояние между элементами и центровку элементов

* Update packages/vkui/src/components/PanelHeader/PanelHeader.tsx


---------

--- a/packages/vkui/src/components/PanelHeader/PanelHeader.module.css
+++ b/packages/vkui/src/components/PanelHeader/PanelHeader.module.css
@@ -70,8 +70,14 @@
 .PanelHeader__after {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   box-sizing: border-box;
   color: var(--vkui--color_icon_accent_themed);
+}
+
+/* stylelint-disable-next-line @project-tools/stylelint-atomic */
+.PanelHeader__after > *:not(:last-child) {
+  margin-right: 4px;
 }
 
 .PanelHeader--vkapps .PanelHeader__after {
